# Lume

./: .gitignore  CEO-REVIEW.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  LICENSE  README.md  RELEASING.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: QUALITY-REVIEW-2026-06-09.md
docs/adr/: 0001-frontend-stack.md  0002-markdown-not-in-tiling-grid.md
docs/release-notes/: v0.1.0-beta.1.md
npm/: .gitignore  README.md  package.json
npm/lib/: resolveAsset.js  resolveAsset.test.js  verifyMinisign.js  verifyMinisign.test.js
plans/: 001-async-tauri-commands.md  002-pty-flush-and-backpressure.md  003-job-objects-process-cleanup.md  004-renderer-fs-hardening.md  005-atomic-file-writes.md  006-restore-stampede-and-poller-pileup.md  007-visibility-render-governor.md  008-agent-state-detection.md  README.md
scripts/: release.ps1
spike-archive/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
spike-archive/src/: App.tsx  main.tsx
spike-archive/src-tauri/: Cargo.toml  tauri.conf.json
spike-archive/src-tauri/capabilities/: default.json
spike-archive/src-tauri/src/: lib.rs  main.rs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: lume-hook.cmd  shell-integration.ps1
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_events.rs  claude_hooks.rs  config.rs  error.rs  file_watcher.rs  fs.rs  git.rs  lib.rs  main.rs  pty.rs  shell_detect.rs  shell_integration.rs
src/codemirror/: csp.test.ts  markdownExtensions.ts  setup.ts  theme.ts
src/components/: ConfirmDialog.module.css  ConfirmDialog.tsx  ContextMenu.module.css  ContextMenu.tsx  FileDrawer.module.css  FileDrawer.tsx  FileSearchResults.tsx  InlineRename.module.css  InlineRename.tsx  MainArea.module.css  MainArea.tsx  MdEditor.module.css  MdEditor.tsx  MdEditorPreview.module.css  MdEditorPreview.tsx  MdEditorTabStrip.module.css  MdEditorTabStrip.tsx  PaneTree.tsx  Preview.module.css  Preview.tsx  QuickViewer.module.css  QuickViewer.tsx  SessionGroup.module.css  SessionGroup.tsx  SessionRow.module.css  SessionRow.test.tsx  SessionRow.tsx  SessionsSidebar.module.css  SessionsSidebar.test.tsx  SessionsSidebar.tsx  SettingsModal.module.css  SettingsModal.test.tsx  SettingsModal.tsx  SettingsModalAgents.test.tsx  ShortcutsModal.module.css  ShortcutsModal.tsx  Sidebar.module.css  Sidebar.tsx  SidebarRow.tsx  SidebarTree.tsx  (+15 more)
src/hooks/: shortcutTarget.test.ts  shortcutTarget.ts  useExternalFileDrop.ts  useKeyboardShortcuts.ts  usePresence.test.ts  usePresence.ts
src/lib/: attachPath.test.ts  attachPath.ts  byteRing.test.ts  byteRing.ts  claudeHooksClient.ts  clipboardClient.ts  commandCapture.test.ts  commandCapture.ts  configClient.ts  confirmStrings.ts  dialogClient.ts  fileSearch.test.ts  fileSearch.ts  fileWatcher.ts  fontPairs.ts  fsClient.ts  internalFileDrag.test.ts  internalFileDrag.ts  internalSessionDrag.ts  normalizePreviewUrl.test.ts  normalizePreviewUrl.ts  openExternal.ts  openPath.ts  paneHitTest.ts  paneIds.ts  pasteFileToPane.test.ts  pasteFileToPane.ts  persistStorage.ts  revealInExplorer.ts  shellsClient.test.ts  shellsClient.ts  themes.ts  updater.ts  versionConsistency.test.ts  versionConsistency.ts  windowControls.ts
src/preview/: renderMarkdown.test.ts  renderMarkdown.ts
src/sessions/: agentIdentity.test.ts  agentIdentity.ts  agentTracker.test.ts  agentTracker.ts  attentionTracker.test.ts  attentionTracker.ts  branchPoller.test.ts  branchPoller.ts  commandTracker.test.ts  commandTracker.ts  migration.ts  oscClipboard.test.ts  oscClipboard.ts  oscNotifications.ts  sessionSignal.test.ts  sessionSignal.ts
src/store/: agentStore.ts  confirmStore.test.ts  confirmStore.ts  contextMenuStore.test.ts  contextMenuStore.ts  dropTargetStore.test.ts  dropTargetStore.ts  layoutStore.ts  mdStore.test.ts  mdStore.ts  previewStore.test.ts  previewStore.ts  ptyStore.ts  sessionDragStore.ts  (+14 more)
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
(+63 files in other folders)
