[package]
name = "workstation"
version = "0.1.0-alpha.0"
description = "Workstation — smooth tiled terminals + markdown editor on the desktop"
edition = "2021"
rust-version = "1.77"

[lib]
name = "workstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
log = "0.4"
portable-pty = "0.8"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
notify = "6.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
