[package]
name = "lume"
version = "0.1.0-beta.9"
description = "Lume — smooth tiled terminals + markdown editor on the desktop"
edition = "2021"
license = "MIT"
rust-version = "1.77"

[lib]
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.1"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
log = "0.4"
portable-pty = "0.8"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
notify = "6.1"
dirs = "5.0"
which = "6.0"
toml = "0.8"
toml_edit = "0.22"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["tlhelp32", "handleapi"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
