[package]
name = "workstation-spike"
version = "0.0.1"
description = "Weekend 0 spike — single-pane Tauri + xterm + portable-pty + WSL"
edition = "2021"
rust-version = "1.77"

[lib]
name = "workstation_spike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
